# rgx

./: .editorconfig  .envrc  CHANGELOG.md  Cargo.toml  DESIGN.md  Dockerfile  IMPLEMENTATION.md  Makefile  README.md
.github/workflows/: cd.yml  default.yml
src/: cli.rs  config.rs  db.rs  lib.rs  main.rs  session.rs
src/db/: mod.rs  store.rs
src/db/migrations/: 0001_initial_schema.sql
src/engine/: mod.rs  native.rs  types.rs
src/tui/: app.rs  mod.rs
