[package]
name = "rgx"
version = "0.1.0"
edition = "2024"
description = "A terminal UI regex tester with multi-engine support"
license = "GPL-3.0-or-later"

[[bin]]
name = "rgx"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30.0" }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tui-textarea = { version = "0.6", features = ["crossterm"] }
regex = "1"
fancy-regex = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

[dev-dependencies]
