[package]
name = "rgx"
version = "0.1.0"
edition = "2024"
description = "A terminal UI regex tester with multi-engine support"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.5" }
crossterm = { version = "0.29.0" }
fancy-regex = "0.13"
ratatui = { version = "0.30.0" }
ratatui-textarea = { version = "0.9.1" }
regex = { version = "1.12.3" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
toml = { version = "1.1.2" }

[dev-dependencies]
